added remnant map, whitelist and wrapper exec script